--- a/src/app/core/components/contact-form/contact-form.component.html
+++ b/src/app/core/components/contact-form/contact-form.component.html
@@ -12,9 +12,9 @@
         #nameField="ngModel"
         [attr.aria-describedby]="nameField.invalid && nameField.touched ? 'name-error' : null"
       />
-      <p *ngIf="nameField.invalid && nameField.touched" class="error-message" id="name-error">
-        El nombre es obligatorio.
-      </p>
+      @if (nameField.invalid && nameField.touched) {
+        <p class="error-message" id="name-error"> El nombre es obligatorio.</p>
+      } 
     </div>
   
     <div class="contact-fields">
@@ -35,18 +35,15 @@
             emailField.invalid && emailField.dirty && emailField.errors?.['invalidEmail'] ? 'email-invalid' :
           null"
         />
-        <p
-          *ngIf="emailField.invalid && emailField.touched && emailField.errors?.['required']"
-          class="error-message" id="email-error"
-        >
-          El correo electrónico es obligatorio.
-        </p>
-        <p
-          *ngIf="emailField.invalid && emailField.dirty && emailField.errors?.['invalidEmail']"
-          class="error-message" id="email-invalid"
+        @if(emailField.invalid && emailField.touched && emailField.errors?.['required']) {
+<p class="error-message" id="email-error">       El correo electrónico es obligatorio.        </p>
+        } @else if (emailField.invalid && emailField.dirty && emailField.errors?.['invalidEmail']) {
+  <p          class="error-message" id="email-invalid"
         >
           El correo electrónico no es válido. Por favor, revísalo.
         </p>
+        }
+        
       </div>
       <div>
         <label for="phone" class="sr-only">Teléfono</label>
@@ -61,9 +58,10 @@
           #phoneField="ngModel"
           [attr.aria-describedby]="phoneField.invalid && phoneField.touched ? 'phone-error' : null"
         />
-        <p *ngIf="phoneField.invalid && phoneField.touched" class="error-message" id="phone-error">
-          El teléfono es obligatorio.
-        </p>
+        @if (phoneField.invalid && phoneField.touched) {
+<p class="error-message" id="phone-error"> El teléfono es obligatorio.</p>
+        }
+        
       </div>
     </div>
   
@@ -79,12 +77,18 @@
         #messageField="ngModel"
         [attr.aria-describedby]="messageField.invalid && messageField.touched ? 'question-error' : null"
       ></textarea>
-      <p *ngIf="messageField.invalid && messageField.touched" class="error-message"  id="question-error">
+      @if (messageField.invalid && messageField.touched) {
+<p class="error-message" id="question-error">
         No olvides incluir tu mensaje.
       </p>
+      }
+      
     </div>
   
     <button class="button" type="submit" [disabled]="myForm.invalid">Enviar</button>
-    <p *ngIf="submittedMessage" class="submitted-message">{{submittedMessage}}</p>
+    @if (submittedMessage) {
+  <p class="submitted-message">{{submittedMessage}}</p>
+    }
+  
   </form>
   
