--- a/src/app/shared/filter-buttons/filter-buttons.component.html
+++ b/src/app/shared/filter-buttons/filter-buttons.component.html
@@ -2,6 +2,14 @@
     <li>
         <button class="category-button" [class.active]="selectedCategoryIndex === null" (click)="updateFilterCategory('', null)">Todos</button>
     </li>
-    <li  *ngFor="let category of categories$ | async; ; let i = index" ><button class="category-button" [class.active]="i === selectedCategoryIndex" (click)="updateFilterCategory(category.name, i)">{{category.name}}</button></li>
+
+@for(category of categories$ | async; track category.name ; let i = $index) {
+    <li>
+        <button class="category-button" [class.active]="i === selectedCategoryIndex" (click)="updateFilterCategory(category.name, i)">{{category.name}}
+        </button>
+    </li>
+}
+
+
 </ul>
 
