--- a/src/app/shared/submenu/submenu.component.html
+++ b/src/app/shared/submenu/submenu.component.html
@@ -1,9 +1,14 @@
-<nav class="submenu-navbar"  *ngIf="submenuVisible">
+@if(submenuVisible) {
+<nav class="submenu-navbar">
     <ul class="submenu-links">
-      <li *ngFor="let category of categories$ | async">
+@for(category of categories$ | async; track category.slug) {
+<li>
         <a class="submenu-text" [routerLink]="[category.slug]"> 
         <img [src]="imagePrefix+category.products[0].images[0]" [alt]="category.name" class="submenu-image">{{category.name}}
     </a>
 </li>
+} 
     </ul>
   </nav>
+}
+
