add pdf catalogue

--- a/src/app/pages/detalle-categoria/detalle-categoria.component.html
+++ b/src/app/pages/detalle-categoria/detalle-categoria.component.html
@@ -25,4 +25,10 @@
     </ul>
 </section>
 
+@if (pdfCatalogueVisible) {
+<section>
+    <app-download-catalogue></app-download-catalogue>
+</section>
+}
+
 </main>
