--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,8 @@
       <div class="vertical-carousel-section-texts">
       <h2 class="title">Amplia gama de letras corpóreas</h2>
       <p>Desde letras de PVC hasta letras y números luminosos de metacrilato y aluminio, letras de madera, etc. Diseños minimalistas o personalizados que se integran en cualquier espacio. Solicita tu presupuesto.</p>
-      <app-button [buttonText]="'Ver todas'" [buttonLink]="'/catalogo'"   ></app-button>
+      <a class="button" href="https://res.cloudinary.com/dxuseyfxa/image/upload/v1754911926/Cat%C3%A1logo_letras_corp%C3%B3reas_Rt%C3%B3tulos_LEAROY_qwlgcc.pdf" 
+      target="_blank" rel="noopener noreferrer"  >Ver todas</a>
     </div>
     <app-animated-vertical-carousel></app-animated-vertical-carousel> 
     </div>
