--- a/src/app/pages/detalle-categoria/detalle-categoria.component.html
+++ b/src/app/pages/detalle-categoria/detalle-categoria.component.html
@@ -1,34 +1,45 @@
-<main *ngIf="categorySelectedData" class="category-page">
-    <section class="centered-section">
-        <h1 class="page-title centered-text">{{categorySelectedData.name}}</h1>
-        <app-cards [cardElements]="categorySelectedData.products" [cardsClass]="'cards-grid'" ></app-cards>
-    </section>
+<main class="category-page">
+  @if (categorySelectedData) {
+  <section class="centered-section">
+    <h1 class="page-title centered-text">{{ categorySelectedData.name }}</h1>
+    <app-cards
+      [cardElements]="categorySelectedData.products"
+      [cardsClass]="'cards-grid'"
+    ></app-cards>
+  </section>
 
-    <section>
-      <ul class="advantages-list centered-text">
-        <li>
-            <h2 class="text-title">¿Cuándo elegir {{categorySelectedData.name}}?</h2>
-            <p>{{categorySelectedData.description.application}}</p>
-        </li>
-        <li>
-            <h2 class="text-title">Tipos de {{categorySelectedData.name}}</h2>
-            <p>{{categorySelectedData.description.products}}</p>
-        </li>
-        <li>
-            <h2 class="text-title">¿Se pueden personalizar {{ categorySelectedData.name | gender}} {{categorySelectedData.name}}?</h2>
-            <p>{{categorySelectedData.description.custom}}</p>
-        </li>
-        <li>
-            <h2 class="text-title">¿Cuánto cuestan {{ categorySelectedData.name | gender}} {{categorySelectedData.name}}?</h2>
-            <p>{{categorySelectedData.description.cost}}</p>
-        </li>
+  <section>
+    <ul class="advantages-list centered-text">
+      <li>
+        <h2 class="text-title">
+          ¿Cuándo elegir {{ categorySelectedData.name }}?
+        </h2>
+        <p>{{ categorySelectedData.description.application }}</p>
+      </li>
+      <li>
+        <h2 class="text-title">Tipos de {{ categorySelectedData.name }}</h2>
+        <p>{{ categorySelectedData.description.products }}</p>
+      </li>
+      <li>
+        <h2 class="text-title">
+          ¿Se pueden personalizar {{ categorySelectedData.name | gender }}
+          {{ categorySelectedData.name }}?
+        </h2>
+        <p>{{ categorySelectedData.description.custom }}</p>
+      </li>
+      <li>
+        <h2 class="text-title">
+          ¿Cuánto cuestan {{ categorySelectedData.name | gender }}
+          {{ categorySelectedData.name }}?
+        </h2>
+        <p>{{ categorySelectedData.description.cost }}</p>
+      </li>
     </ul>
-</section>
+  </section>
 
-@if (pdfCatalogueVisible) {
-<section>
+  @if (pdfCatalogueVisible) {
+  <section>
     <app-download-catalogue></app-download-catalogue>
-</section>
-}
-
+  </section>
+  } }
 </main>
