social media component added

--- a/src/app/core/components/footer/footer.component.css
+++ b/src/app/core/components/footer/footer.component.css
@@ -48,7 +48,15 @@
   .secondary-footer-text {
   font-size: 14px;
 }
-  
+
+.fa-brands {
+   height: 22px;
+}
+  .footer-social-media-icons {
+display: flex;
+gap: 6px
+  }
+
   @media screen and (max-width: 766px) {
     nav {
       display: none;
