--- a/src/app/pages/nosotros/nosotros.component.html
+++ b/src/app/pages/nosotros/nosotros.component.html
@@ -18,7 +18,11 @@
 
            
         </section>
-   <app-keywords-animation></app-keywords-animation>
+        <section class="social-media-section">
+             <h2 class="subtitle centered-text">Sigue &#64;rotuloslearoy en Instagram y Tik Tok </h2>
+         <app-social-media></app-social-media>
+         </section>
+  
         <app-contact-banner></app-contact-banner>
         </main>        
 
