fix social media cta

--- a/src/app/pages/nosotros/nosotros.component.html
+++ b/src/app/pages/nosotros/nosotros.component.html
@@ -19,7 +19,7 @@
            
         </section>
         <section class="social-media-section">
-             <h2 class="subtitle centered-text">Sigue &#64;rotuloslearoy en Instagram y Tik Tok </h2>
+             <h2 class="subtitle centered-text">Sigue &#64;rotuloslearoy en Tik Tok </h2>
          <app-social-media></app-social-media>
          </section>
   
