add dynamic year to copyright

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -80,7 +80,7 @@ viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fo
     </nav>
   </div>
   <div class="secondary-footer-container">
-    <p class="secondary-footer-text">Copyright © 2025 Learoy LED Tecnology | Todos los derechos reservados</p>
+    <p class="secondary-footer-text">Copyright © {{currentYear}} Learoy LED Tecnology | Todos los derechos reservados</p>
   </div>
   </footer>
   
