--- a/src/app/pages/categorias/categorias.component.html
+++ b/src/app/pages/categorias/categorias.component.html
@@ -12,10 +12,7 @@
 @for(category of categories$ | async | filter: categorySelectedName; track category.name; let i = $index) {
   <div>
       <h2 class="subtitle centered-text">{{category.name}}</h2>
-      @if(isCategory(category)) {
-<app-cards [cardElements]="category.products" [cardsClass]="'cards-grid'"></app-cards>
-      }
-     
+<app-cards [cardElements]="getProductsInCategory(category.slug) | async" [cardsClass]="'cards-grid'"></app-cards>
   </div>
 }
   
