--- a/src/app/pages/admin-panel/admin-panel.component.css
+++ b/src/app/pages/admin-panel/admin-panel.component.css
@@ -31,5 +31,7 @@ z-index: 0;
       background-color: var(--color-white);
       border-radius: 10px;
       padding: 0;
-      width: 70%
+      max-width: 850px;
+      max-height: 75vh;
+      overflow-y:scroll;
     }
