--- a/src/app/shared/cards/cards.component.html
+++ b/src/app/shared/cards/cards.component.html
@@ -2,7 +2,7 @@
 <ul [ngClass]="cardsClass">
 @for(element of cardElements | order; track element.name) {
 <li class="card-figure" [ngClass]="getCardClass(element)" (click)="selectElement(element)">
-    <img class="card-image" [src]="imagePrefix+getSrcImage(element)" [alt]="getSrcImage(element) | alt" />
+    <img class="card-image" [src]="getSrcImage(element)" [alt]="getSrcImage(element) | alt" />
      <h3 class="element-title centered-text">{{ element.name }}</h3>
   </li>
 }
