--- a/src/app/shared/category-cards/category-cards.component.html
+++ b/src/app/shared/category-cards/category-cards.component.html
@@ -1,7 +1,7 @@
 <ul class="cards-grid">
 @for(element of cardElements; track element.name) {
 <li class="card-figure" (click)="selectElement(element)">
-    <img class="card-image" [src]="imagePrefix+element.image" [alt]="element.name" />
+    <img class="card-image" [src]="element.image" [alt]="element.name" />
      <h3 class="element-title centered-text">{{ element.name }}</h3>
      <div class="category-card-description-container">
      <p class="category-card-description">{{ element.description.products }}</p>
