--- a/src/styles.css
+++ b/src/styles.css
@@ -168,8 +168,8 @@ form {
   display: flex;
   gap: 12px;
   flex-direction: column;
-  align-items: center;
 }
+
 
 .form-field {
   padding: 12px 22px;
@@ -181,6 +181,10 @@ form {
 .label {
   align-self: flex-start;
   padding: 12px  0 0 22px;
+}
+
+.buttons-container {
+  align-self: center;
 }
 
 .error-message {
